Alignment Fixes

--- a/src/FormData/index.css
+++ b/src/FormData/index.css
@@ -63,7 +63,7 @@
 }
 .submit-btn-container {
   display: flex;
- margin-left: 700px;
+ /* margin-left: 200px; */
   
 }
 .submit-btn  {
@@ -72,7 +72,7 @@
   font-size: 14px;
   color: #ffffff;
   height: 40px;
-  /* width: 50%; */
+  /* width: 100%; */
   margin-top: 20px;
   margin-bottom: 2px;
   background-color: #2083f8;
