--- a/src/Header/index.css
+++ b/src/Header/index.css
@@ -2,6 +2,7 @@
 .navbar  {
   position: sticky;
   top: 0;
+  z-index: 9999;
   /* z-index: 100; */
   background-color: rgb(28, 28, 36);
   /* background-color: #242323; */
