--- a/src/HowItWorks/index.css
+++ b/src/HowItWorks/index.css
@@ -86,6 +86,7 @@
     font-weight: 700;
     color: black;
     font-size: 32px;
+    margin-bottom: 15px;
 }
 .description-hw  {
     font-family: "Roboto";
